# Matrix

./: CHANGELOG.md  Matrix.cabal
src/: Lib.hs  Matrix.hs
