cabal-version:       2.2

name:                Matrix
version:             0.1.0.0
synopsis:            A simple matrix library
description:         To fully implement the abilities of matricies, this library implements the following functions: the dot product, the hadamard product and the exponent
homepage:            https://github.com/githubuser/Matrix#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Jonas Ingerslev Sørensen
maintainer:          ingerslev.jonas@gmail.com
copyright:           2024 Jonas Ingerslev Sørensen
category:            Arithmatic
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser/Matrix
